--- a/Temp.ipynb
+++ b/Temp.ipynb
@@ -450,6 +450,37 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f1bad85a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not paraphrase: 66%\n",
+      "is paraphrase: 34%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import torch\n",
+    "model_name = \"bert-base-cased-finetuned-mrpc\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
+    "sequence_0 = \"What an six!\"\n",
+    "sequence_1 = \"That was an excellent six by Nelson Mandela\"\n",
+    "tokens = tokenizer.encode_plus(sequence_0, sequence_1, return_tensors=\"pt\")\n",
+    "classification_logits = model(**tokens)[0]\n",
+    "results = torch.softmax(classification_logits, dim=1).tolist()[0]\n",
+    "classes = [\"not paraphrase\", \"is paraphrase\"]\n",
+    "for i in range(len(classes)):\n",
+    "    print(f\"{classes[i]}: {round(results[i] * 100)}%\")"
+   ]
   }
  ],
  "metadata": {
