Added better AI to check phrase similarity

--- a/Temp.ipynb
+++ b/Temp.ipynb
@@ -453,33 +453,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f1bad85a",
+   "execution_count": 2,
+   "id": "8af57ecd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "\n",
+    "model = SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')\n",
+    "\n",
+    "#Takes some time to load the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "40203286",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "not paraphrase: 66%\n",
-      "is paraphrase: 34%\n"
+      "0.5081178545951843\n"
      ]
     }
    ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
-    "import torch\n",
-    "model_name = \"bert-base-cased-finetuned-mrpc\"\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
-    "sequence_0 = \"What an six!\"\n",
-    "sequence_1 = \"That was an excellent six by Nelson Mandela\"\n",
-    "tokens = tokenizer.encode_plus(sequence_0, sequence_1, return_tensors=\"pt\")\n",
-    "classification_logits = model(**tokens)[0]\n",
-    "results = torch.softmax(classification_logits, dim=1).tolist()[0]\n",
-    "classes = [\"not paraphrase\", \"is paraphrase\"]\n",
-    "for i in range(len(classes)):\n",
-    "    print(f\"{classes[i]}: {round(results[i] * 100)}%\")"
+    "#First time processing takes around 5 seconds, subsequent times take less (less than a second)\n",
+    "\n",
+    "sentences = [\"What an six!\", \"That was an excellent six by Rohit Sharma\"]\n",
+    "#Compute embedding for both lists\n",
+    "embedding_1= model.encode(sentences[0])\n",
+    "embedding_2 = model.encode(sentences[1])\n",
+    "\n",
+    "output = util.pytorch_cos_sim(embedding_1, embedding_2)\n",
+    "\n",
+    "print(output.tolist()[0][0])"
    ]
   },
   {
